# display-switcher

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
icon-concepts/: compare.html
scripts/: release.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: actions.rs  activator.rs  config.rs  gamepad.rs  hotkeys.rs  lib.rs  main.rs  startup.rs  state.rs  steam.rs  telemetry.rs  window_chrome.rs
src-tauri/src/display/: apply.rs  capture.rs  enumerate.rs  mod.rs  remap.rs  types.rs
src/components/: GroupEditor.tsx  OnboardingWizard.tsx  TelemetryPanel.tsx  VersionFooter.tsx
src/components/ui/: button.tsx
src/hooks/: useTheme.ts
src/lib/: api.ts
