[package]
name = "display-switcher"
version = "0.1.0"
description = "Fast display group switching with hotkeys and tray"
authors = ["Daniel Dye"]
edition = "2021"

[lib]
name = "display_switcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
parking_lot = "0.12"
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Devices_Display",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_Security",
] }